k8s/setting/githubissuemanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: githubissuemanager-ngnix-ingress
  namespace: githubissuemanager
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 3000
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8080
