k8s/setting/githubissuemanager-client-side-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: client-side
  namespace: githubissuemanager
spec:
  podSelector:
    matchLabels:
      app: server
      service: server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: githubissuemanager
        - podSelector:
            matchLabels:
              network-client-side: "true"
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 3000
